@@ -41,6 +41,7 @@ General
 - Membership permissions have been overhauled and have been flattened into a single tiered
   role. Additionally owners will no longer be automatically added to new teams.
 - ``NotificationPlugin`` now requires ``is_configured`` to be declared.
+- Team and System based quotas are now longer available. A new organization-relative project quota replaces them.
 
 Client API
 ~~~~~~~~~~
